--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "cypress": "^13.6.0"
   },
   "scripts": {
-    "cypress:open": "cypress open"
+    "cypress:open": "cypress open",
+    "cypress:run" : "cypress run"
   }
 }
